--- a/ext.tabs.css
+++ b/ext.tabs.css
@@ -14,18 +14,29 @@
  * :not(oldbrowser) is chosen as selector, since the <body> tag can't also be an <oldbrowser> tag at the same time.
  * The only browsers with :checked support, but without :not() support are Opera 9.0-9.5 and Safari 3.1.*
  * Those browsers will have to rely on the JS alternative. If JS is disabled for them, all tabs will show at once.
+ * this needs to be a seperate style, since old browsers will ignore the rule with :not() altogether.
  * Sources: https://developer.mozilla.org/en-US/docs/Web/CSS/:checked#Browser_compatibility,
  *          https://developer.mozilla.org/en-US/docs/Web/CSS/:not#Browser_compatibility
  */
+body:not(oldbrowser) .tabs-content {display:none;}
 
-body:not(oldbrowser) .tabs-content {display:none;} /* this needs to be a seperate style, since old browsers will ignore the rule with :not() altogether */
+/**
+ * This is for testing if the browser supports the :not() selector. !important is used to ensure this style doesn't change.
+ * The "sans-serif" ("without-serif") and "serif" fonts are used to indicate "sans" :not()-support or with.
+ * This form is used as a "testcase" because it is hidden from view anyway, and always present when any <tab> or <tabs> tags are present.
+ * The margin:0px is to determine whether the browser supports the general sibling selector ~. If it doesn't, there is "no margin" for interactivity, so JS is not activated.
+ */
+#tabs-inputform {font-family:sans-serif !important;margin:0px !important;}
+head~body #tabs-inputform {margin:1px !important;}
+body:not(oldbrowser) #tabs-inputform {font-family:serif !important;}
+
 /**
  * max-height prevents font-boosting on tabs in mobile browsers even when not in mobile skin.
  * Font-boosting causes weird differences between tab contents and surrounding text (most specifically for inline tabs), so disabling it altogether.
  * If font-boosting doesn't create difference in size between text and inline tab contents anymore, remove or comment out the next line.
  */
 .tabs, .tabs * {max-height:1000000px;}
-.tabs-input, .tabs-close {display:none;}
+.tabs-input, .tabs-close, #tabs-inputform, body.tabs-oldbrowserscript .tabs-content {display:none;}
 .tabs-tabbox, .tabs-togglebox {margin:10px 0;}
 .tabs-label {
 	cursor:pointer;
@@ -91,14 +102,24 @@ body:not(oldbrowser) .tabs-content {display:none;} /* this needs to be a seperat
 
 .tabs-label:hover {background-color:#CCC;}
 .tabs-label:active {background-color:#CCE;}
-.tabs-tabbox > .tabs-input:checked + .tabs-label,
+.tabs-tabbox > .tabs-input:checked + .tabs-label, 
 .tabs-input-0:checked + .tabs-input-1 + .tabs-label {
 	z-index:2;
 	background-color:#FFF;
 }
 .tabs-togglebox >*> .tabs-input:checked + .tabs-label {border-radius:7px 7px 0 0;}
-.tabs-togglebox >*> .tabs-input:checked ~ .tabs-content {
-	display:block;
-}
-.tabs-togglebox >*> .tabs-input:checked + * .tabs-close {display:inline;} /* tabs-close is hidden by default, tabs-open is shown by default. Swap this when the tab is opened. */
+.tabs-togglebox >*> .tabs-input:checked ~ .tabs-content {display:block;}
+
+/* tabs-close is hidden by default, tabs-open is shown by default. Swap this when the tab is opened. */
+.tabs-togglebox >*> .tabs-input:checked + * .tabs-close {display:inline;}
 .tabs-togglebox >*> .tabs-input:checked + * .tabs-open {display:none;}
+
+/* The same interactivity styles, but for non-:checked browsers with JS */
+.tabs-tabbox > .tabs-input.checked + .tabs-label,
+.tabs-input-0.checked + .tabs-input-1 + .tabs-label {
+	z-index:2;
+	background-color:#FFF;
+}
+.tabs-togglebox >*> .tabs-input.checked ~ .tabs-content {display:block;}
+.tabs-togglebox >*> .tabs-input.checked + * .tabs-close {display:inline;}
+.tabs-togglebox >*> .tabs-input.checked + * .tabs-open {display:none;}
