Removed part that wasn't working
Removed the part of defining 2 tabs in 1 tag, since that was breaking
all other things. Also made some minor changes again.

--- a/ext.tabs.css
+++ b/ext.tabs.css
@@ -49,6 +49,7 @@ body:not(oldbrowser) #tabs-inputform {font-family:serif !important;}
 	border-radius:7px 7px 0 0;
 	position:relative;
 	display:inline-block;
+	vertical-align:bottom;
 }
 .tabs-container, .tabs-label {border:1px solid #AAA;}
 .tabs-inline {display:inline-block;}
